<resources>
    <string name="app_name">ProjetFR678</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Save and list</string>
    <string name="previous">New trip</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="departure">departure</string>
    <string name="km">Milage of your car</string>
    <string name="destination">Destination of your trip</string>
    <string name="date">Date of your trip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_first_fragment">Hello first fragment</string>

</resources>
