<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data >
        <variable
            name="mainViewModele"
            type="biz.ei6.projetfr678.MainViewModele" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/main_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"

        app:layout_constraintTop_toBottomOf="@+id/main_first_arrivee_location_til"
        app:layout_constraintBottom_toTopOf="@id/main_first_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"
        />



    <EditText
        android:id="@+id/main_first_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@{mainViewModele.dateTxt}"
        android:hint="@string/date"

        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/main_first_depart_km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@android:string/unknownName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/main_first_depart_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@{mainViewModele.departKMTxt}"
        tools:text="@android:string/unknownName"
        app:layout_constraintBottom_toTopOf="@id/main_first_depart_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_first_date" />

    <EditText
        android:id="@+id/main_first_depart_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{mainViewModele.departLocation}"
        tools:text="@android:string/unknownName"
        android:layout_marginStart="20dp"

        app:layout_constraintBottom_toBottomOf="@id/main_first_depart_km"
        app:layout_constraintStart_toEndOf="@id/main_first_depart_km"
        app:layout_constraintTop_toTopOf="@id/main_first_depart_km" />
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/main_first_arrivee_km_til"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    app:layout_constraintBottom_toTopOf="@id/main_first_arrivee_location_til"
    app:layout_constraintStart_toStartOf="@id/main_first_depart_km"
    app:layout_constraintTop_toBottomOf="@id/main_first_depart_location">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_first_arrivee_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="9"
        android:hint="@string/km"
        android:inputType="textPersonName"
        android:text="@={mainViewModele.arriveeKMTxt}"

        />
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/main_first_arrivee_location_til"
        app:layout_constraintBottom_toBottomOf="@id/main_first_guideline"
        app:layout_constraintStart_toStartOf="@id/main_first_depart_km"
        app:layout_constraintTop_toBottomOf="@id/main_first_arrivee_km_til">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_first_arrivee_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="14"
        android:hint="@string/destination"
        android:text="@={mainViewModele.arriveeLocation}"
        android:inputType="textPersonName"
         />
</com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>